# epic_manifest_parser_rs

./: Cargo.toml
exemples/epic_manifest_test/: Cargo.toml
exemples/epic_manifest_test/src/: main.rs
src/: lib.rs  reader.rs
src/manifest/: chunk_header.rs  chunk_info.rs  chunk_list.rs  chunk_part.rs  custom_fields.rs  file_manifest.rs  file_manifest_list.rs  header.rs  meta.rs  mod.rs  shared.rs
src/manifest/chunks/: chunk_header.rs
