workspace = { members = ["exemples/epic_manifest_test"] }
[package]
name = "epic_manifest_parser_rs"
version = "0.1.6"
edition = "2021"
description = "A lightweight, fast epic manifest parser made in Rust."
license = "MIT"

[dependencies]
flate2 = "1.0.28"
serde = { version = "1.0.197", features = ["derive"] }
sha1 = "0.10.6"
widestring = "1.0.2"
