[package]
name = "epic_manifest_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
epic_manifest_parser_rs = {path = "../../"}
flate2 = "1.0.28"
reqwest = { version = "0.11.24", features = ["blocking", "stream"] }
serde_json = "1.0.114"
